--- a/apps/accounts/templates/accounts/logged_out.html
+++ b/apps/accounts/templates/accounts/logged_out.html
@@ -11,6 +11,15 @@
 {% endblock breadcrumbs %}
 
 {% block content %}
-  <p>Logged out!</p>  
-  <a href="{% url 'accounts:login'%}">Click here to login again.</a>
+  <div class="container">
+    <div class="card card-login mx-auto mt-5 mb-3">
+      <div class="card-header">Logged out</div>
+      <div class="card-body">
+        <div class="text-center">
+          <p>Bye!</p>
+          <a href="{% url 'accounts:login'%}">Click here to login again.</a>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
