--- a/apps/catalogue/templates/catalogue/observation_list.html
+++ b/apps/catalogue/templates/catalogue/observation_list.html
@@ -24,12 +24,18 @@
       <table class="table table-bordered" id="observations" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>Observation</th>
+            <th>Parameter</th>
+            <th>Value</th>
+            <th>Sigma Up</th>
+            <th>Sigma Down</th>
           </tr>
         </thead>
         <tfoot>
           <tr>
-            <th>Observation</th>
+            <th>Parameter</th>
+            <th>Value</th>
+            <th>Sigma Up</th>
+            <th>Sigma Down</th>
           </tr>
         </tfoot>
       </table>
