--- a/apps/catalogue/templates/catalogue/index.html
+++ b/apps/catalogue/templates/catalogue/index.html
@@ -2,8 +2,13 @@
 {% load static %}
 
 {% block content %} {{ block.super }}
-<div class="mx-auto">
-    {{ fig_div | safe }}
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fas fa-chart-area"></i>
+    Spatial Distribution</div>
+  <div class="card-body">
+        {{ fig_div | safe }}
+  </div>
 </div>
 {% endblock %}
 
