Update the frontend too

--- a/apps/catalogue/templates/catalogue/reference_list.html
+++ b/apps/catalogue/templates/catalogue/reference_list.html
@@ -38,7 +38,7 @@
             <th>External URL</th>
           </tr>
         </tfoot>
-        <tbody id="globularClusterRow">
+        <tbody id="AstroObjectRow">
         </tbody>
       </table>
     </div>
