--- a/apps/catalogue/templates/catalogue/astro_object_detail.html
+++ b/apps/catalogue/templates/catalogue/astro_object_detail.html
@@ -8,9 +8,9 @@
       <a href="{% url 'index' %}">Home</a>
     </li>
     <li class="breadcrumb-item">
-      <a href="{% url 'catalogue:cluster_list' %}">Globular Clusters</a>
+      <a href="{% url 'catalogue:astro_object_list' %}">AstroObjects</a>
     </li>
-    <li class="breadcrumb-item active">{{ cluster.name }} {% if cluster.altname %} ({{ cluster.altname }}) {% endif %}</li>
+    <li class="breadcrumb-item active">{{ astro_object.name }} {% if astro_object.altname %} ({{ astro_object.altname }}) {% endif %}</li>
   </ol>
 {% endblock breadcrumbs %}
 
@@ -18,12 +18,12 @@
 <div class="card mb-3">
   <div class="card-header">
     <i class="fas fa-star"></i>
-    {{ cluster.name }} {% if cluster.altname %} ({{ cluster.altname }}) {% endif %}
+    {{ astro_object.name }} {% if astro_object.altname %} ({{ astro_object.altname }}) {% endif %}
   </div>
 
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered" id="observations{{ cluster.id }}" width="100%" cellspacing="0">
+      <table class="table table-bordered" id="observations{{ astro_object.id }}" width="100%" cellspacing="0">
         <thead>
           <tr>
             <th>Parameter</th>
@@ -51,10 +51,10 @@
 {% endblock content %}
 
 {% block bottomscripts %} {{ block.super }}
-    <script type="text/javascript" src="{% static 'catalogue/js/cluster_detail.js' %}"></script>
+    <script type="text/javascript" src="{% static 'catalogue/js/astro_object_detail.js' %}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
-            retrieve_cluster_observations( {{ cluster.pk }} );
+            retrieve_astro_object_observations( {{ astro_object.pk }} );
         });
     </script>
 {% endblock bottomscripts %}
