--- a/apps/catalogue/templates/catalogue/astro_object_list.html
+++ b/apps/catalogue/templates/catalogue/astro_object_list.html
@@ -10,7 +10,7 @@
     <li class="breadcrumb-item">
       <a href="{% url 'index' %}">Home</a>
     </li>
-    <li class="breadcrumb-item active">Globular Clusters</li>
+    <li class="breadcrumb-item active">AstroObjects</li>
   </ol>
 {% endblock breadcrumbs %}
 
@@ -18,10 +18,10 @@
 <div class="card mb-3">
   <div class="card-header">
     <i class="fas fa-fw fa-star"></i>
-    Globular Clusters</div>
+    AstroObjects</div>
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered" id="clusters" width="100%" cellspacing="0">
+      <table class="table table-bordered" id="astro_objects" width="100%" cellspacing="0">
         <thead>
           <tr>
             <th>Name</th>
@@ -42,5 +42,5 @@
 {% endblock %}
 
 {% block bottomscripts %} {{ block.super }}
-    <script type="text/javascript" src="{% static 'catalogue/js/cluster_list.js' %}"></script>
+    <script type="text/javascript" src="{% static 'catalogue/js/astro_object_list.js' %}"></script>
 {% endblock bottomscripts %}
