--- a/apps/catalogue/templates/catalogue/reference_detail.html
+++ b/apps/catalogue/templates/catalogue/reference_detail.html
@@ -32,11 +32,11 @@
 <div class="card mb-3">
   <div class="card-header">
     <i class="fas fa-fw fa-star"></i>
-    Clusters
+    AstroObjects
   </div>
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered" id="clusters{{ reference.id }}" width="100%" cellspacing="0">
+      <table class="table table-bordered" id="astro_objects{{ reference.id }}" width="100%" cellspacing="0">
       </table>
     </div>
   </div>
@@ -54,7 +54,7 @@
       <table class="table table-bordered" id="observations{{ reference.pk }}" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>Cluster</th>
+            <th>AstroObjects</th>
             <th>Alias</th>
             <th>Parameter</th>
             <th>Value</th>
@@ -64,7 +64,7 @@
         </thead>
         <tfoot>
           <tr>
-            <th>Cluster</th>
+            <th>AstroObject</th>
             <th>Alias</th>
             <th>Parameter</th>
             <th>Value</th>
