--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,9 +1,9 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'catalogue:cluster_list' %}">
+        <a class="nav-link" href="{% url 'catalogue:astro_object_list' %}">
           <i class="fas fa-fw fa-star"></i>
-          <span>Globular Clusters</span></a>
+          <span>Astro Objects</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'catalogue:parameter_list' %}">
