Add 'Open Source' to sidebar urls

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -30,4 +30,9 @@
           <i class="fas fa-fw fa-database"></i>
           <span>Raw Data</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/tlrh314/supaharris">
+          <i class="fab fa-fw fa-github"></i>
+          <span>Open Source</span></a>
+      </li>
     </ul>
