--- a/apps/catalogue/templates/catalogue/astro_object_list.html
+++ b/apps/catalogue/templates/catalogue/astro_object_list.html
@@ -24,14 +24,17 @@
       <table class="table table-bordered" id="astro_objects" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Alias</th>
+            <th><i class="fas fa-fw fa-search"></i>Name</th>
+            <th><i class="fas fa-fw fa-search"></i>Alias</th>
+            <th><i class="fas fa-fw fa-times"></i>Classification</th>
           </tr>
         </thead>
         <tfoot>
           <tr>
             <th>Name</th>
             <th>Alias</th>
+            <th>Classification</th>
+            <th></th>
           </tr>
         </tfoot>
       </table>
