Various catalogue frontend updates, including date_updated

--- a/apps/catalogue/templates/catalogue/astro_object_list.html
+++ b/apps/catalogue/templates/catalogue/astro_object_list.html
@@ -40,7 +40,7 @@
       </table>
     </div>
   </div>
-  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+  <div class="card-footer small text-muted">Updated {{ date_updated }}</div>
 </div>
 {% endblock %}
 
