--- a/apps/catalogue/templates/catalogue/observation_list.html
+++ b/apps/catalogue/templates/catalogue/observation_list.html
@@ -24,24 +24,28 @@
       <table class="table table-bordered" id="observations" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>Parameter</th>
-            <th>Value</th>
-            <th>Sigma Up</th>
-            <th>Sigma Down</th>
+            <th><i class="fas fa-fw fa-search"></i>Astro Object</th>
+            <th><i class="fas fa-fw fa-search"></i>Parameter</th>
+            <th><i class="fas fa-fw fa-search"></i>Value</th>
+            <th><i class="fas fa-fw fa-search"></i>Sigma Up</th>
+            <th><i class="fas fa-fw fa-search"></i>Sigma Down</th>
+            <th><i class="fas fa-fw fa-times"></i>Reference</th>
           </tr>
         </thead>
         <tfoot>
           <tr>
+            <th>Astro Object</th>
             <th>Parameter</th>
             <th>Value</th>
             <th>Sigma Up</th>
             <th>Sigma Down</th>
+            <th>Reference</th>
           </tr>
         </tfoot>
       </table>
     </div>
   </div>
-  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+  <div class="card-footer small text-muted">Updated {{ date_updated }}</div>
 </div>
 {% endblock %}
 
