--- a/apps/catalogue/templates/catalogue/parameter_list.html
+++ b/apps/catalogue/templates/catalogue/parameter_list.html
@@ -24,10 +24,10 @@
       <table class="table table-bordered" id="parameters" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>Parameter</th>
-            <th>Description</th>
-            <th>unit</th>
-            <th>scale</th>
+            <th><i class="fas fa-fw fa-search"></i>Parameter</th>
+            <th><i class="fas fa-fw fa-search"></i>Description</th>
+            <th><i class="fas fa-fw fa-search"></i>unit</th>
+            <th><i class="fas fa-fw fa-search"></i>scale</th>
           </tr>
         </thead>
         <tfoot>
@@ -41,7 +41,7 @@
       </table>
     </div>
   </div>
-  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+  <div class="card-footer small text-muted">Updated {{ date_updated }}</div>
 </div>
 {% endblock %}
 
