--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -33,12 +32,13 @@
 
 {% block stylesheets %}
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'vendor/datatables/dataTables.bootstrap4.css' %}" rel="stylesheet">
+    <link href="{% static 'vendor/datatables/dataTables.bootstrap4.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'vendor/jquery-typeahead/jquery.typeahead.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/cookieconsent/cookieconsent.min.css' %}" rel="styelsheet" type="text/css">
     <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bokeh-1.0.4.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bokeh-widgets-1.0.4.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bokeh-tables-1.0.4.min.css' %}">
+    <link href="{% static 'vendor/bokeh/css/bokeh.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/bokeh/css/bokeh-widgets.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/bokeh/css/bokeh-tables.min.css' %}" rel="stylesheet" type="text/css">
 {% endblock stylesheets %}
 
 {% block topscripts %}
@@ -52,9 +52,7 @@
         };
     </script>
 {% endblock topscripts %}
-
 </head>
-
 
 <body id="page-top">
     {% include 'header.html' %}
@@ -64,9 +62,7 @@
 
     <div id="content-wrapper">
       <div class="container-fluid">
-
       {% block breadcrumbs %}
-        <!-- Breadcrumbs-->
         <ol class="breadcrumb">
           <li class="breadcrumb-item active">
             <a href="{% url 'index' %}">Home</a>
@@ -76,21 +72,15 @@
 
       {% block content %}
       {% endblock content %}
+
       </div>
-      <!-- /.container-fluid -->
-
     </div>
-    <!-- /.content-wrapper -->
-
   </div>
-  <!-- /#wrapper -->
 
-  <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <!-- Logout Modal-->
   <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -108,7 +98,6 @@
       </div>
     </div>
   </div>
-
 
     {% include 'footer.html' %}
 
@@ -131,15 +120,14 @@
     <script src="{% static 'catalogue/js/search.js' %}"></script>
 
     <!-- Cookie consent pop-up -->
-    <script type="text/javascript" src="{% static 'js/cookieconsent.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vendor/cookieconsent/cookieconsent.min.js' %}"></script>
 
     <!-- Bokeh -->
-    <script type="text/javascript" src="{% static 'js/bokeh-1.0.4.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bokeh-widgets-1.0.4.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bokeh-tables-1.0.4.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bokeh-api-1.0.4.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vendor/bokehjs/js/bokeh.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vendor/bokehjs/js/bokeh-widgets.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vendor/bokehjs/js/bokeh-tables.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vendor/bokehjs/js/bokeh-api.min.js' %}"></script>
     {% endblock bottomscripts %}
 
 </body>
-
 </html>
