--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
     <form class="d-none d-md-inline-block form-inline ml-auto mr-auto" autocomplete="off">
       <div class="input-group" class="autocomplete">
         <input id="globalSearch" type="text" class="form-control"
-               placeholder="Search for..." aria-label="Search"
+               placeholder="Search object..." aria-label="Search"
                aria-describedby="basic-addon2">
         <div class="input-group-append">
           <button class="btn btn-primary" type="button">
