Add DatatablesFilterBackend to the ViewSet to make serverSide work -.-' #3

--- a/apps/catalogue/templates/catalogue/astro_object_list.html
+++ b/apps/catalogue/templates/catalogue/astro_object_list.html
@@ -26,7 +26,7 @@
           <tr>
             <th><i class="fas fa-fw fa-search"></i>Name</th>
             <th><i class="fas fa-fw fa-search"></i>Alias</th>
-            <th><i class="fas fa-fw fa-times"></i>Classification</th>
+            <th><i class="fas fa-fw fa-search"></i>Classification</th>
           </tr>
         </thead>
         <tfoot>
