--- a/apps/catalogue/templates/catalogue/index.html
+++ b/apps/catalogue/templates/catalogue/index.html
@@ -10,8 +10,34 @@
         {{ fig_div | safe }}
   </div>
 </div>
+
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fas fa-fw fa-binoculars"></i>
+    Harris (1996, 2010 edition)</div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-bordered" id="observationsTable" width="100%" cellspacing="0">
+        <thead id="observationsTableHead">
+        </thead>
+        <tfoot id="observationsTableFoot">
+        </tfoot>
+      </table>
+    </div>
+  </div>
+  <div class="card-footer small text-muted">Updated {{ date_updated }}</div>
+</div>
 {% endblock %}
 
 {% block bottomscripts %} {{ block.super }}
     {{ fig_script | safe }}
+    <script type="text/javascript" src="{% static 'catalogue/js/observations_table.js' %}"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+        columns = retrieve_observation_table_columns();
+        set_observation_table_header(columns);
+        set_observation_table(columns);
+    });
+    </script>
+
 {% endblock bottomscripts %}
