--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,9 @@
   {% include 'footer.html' %}
 
   {% block bottomscripts %}
+  <!-- JS, Popper.js, and jQuery -->
   <script type="text/javascript" src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'vendor/popper/js/popper.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'vendor/jquery-typeahead/jquery.typeahead.min.js' %}"></script>
